--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,28 @@
-.container {
+body {
+  background: #defcf9;
   font-family: "Poppins", sans-serif;
+
 }
 
 .weather-app {
-  /* background: #e8f4ff; */
+  background: #fff;
   max-width: 600px;
   padding: 20px;
   margin: 50px auto;
   border-radius: 0.375rem;
 }
 
+.btn-primary {
+  background: #6c6c6c;
+  border: none;
+}
+
+.btn-primary:hover {
+  background: #4ab8b8;
+}
+
 .location {
-  color: #0e5ed7;
+  color: #6c6c6c;
 }
 
 .city-search {
